CategoryController and CategoryService tests added